--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/recompose": "^0.30.7",
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.0",
     "dayjs": "^1.8.14",
@@ -133,6 +134,7 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.4",
